// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressDiff > should render the component 1`] = `
<div>
  <address
    class="whitespace-pre-wrap not-italic"
    data-testid="address-diff"
  >
    <div
      class="diff-viewer-content"
    >
      <del
        class="bg-red-100 text-red-500"
      >
        123
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        456
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        M
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        O
      </ins>
      a
      <del
        class="bg-red-100 text-red-500"
      >
        in
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        k
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        St 
      </del>
      A
      <del
        class="bg-red-100 text-red-500"
      >
        pt
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        ve
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        4
A
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        U
      </ins>
      n
      <del
        class="bg-red-100 text-red-500"
      >
        y
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        i
      </ins>
      t
      <del
        class="bg-red-100 text-red-500"
      >
        own
      </del>
       
      <ins
        class="bg-green-100 text-green-500"
      >
        5

      </ins>
      O
      <del
        class="bg-red-100 text-red-500"
      >
        N
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        therville
      </ins>
       
      <ins
        class="bg-green-100 text-green-500"
      >
        QC
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        K1A
      </del>
       
      <del
        class="bg-red-100 text-red-500"
      >
        0
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        H2
      </ins>
      B
      <del
        class="bg-red-100 text-red-500"
      >
        1
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
         2C3
      </ins>
      
Canada
    </div>
  </address>
</div>
`;

exports[`AddressDiff > should render the component with an alternate format 1`] = `
<div>
  <address
    class="whitespace-pre-wrap not-italic"
    data-testid="address-diff"
  >
    <div
      class="diff-viewer-content"
    >
      <del
        class="bg-red-100 text-red-500"
      >
        123
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        456
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        M
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        O
      </ins>
      a
      <del
        class="bg-red-100 text-red-500"
      >
        in
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        k
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        St 
      </del>
      A
      <del
        class="bg-red-100 text-red-500"
      >
        pt
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        ve
      </ins>
       
      <del
        class="bg-red-100 text-red-500"
      >
        4
A
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        U
      </ins>
      n
      <del
        class="bg-red-100 text-red-500"
      >
        y
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        i
      </ins>
      t
      <ins
        class="bg-green-100 text-green-500"
      >
         5

      </ins>
      O
      <del
        class="bg-red-100 text-red-500"
      >
        wn
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        therville
      </ins>
      , 
      <del
        class="bg-red-100 text-red-500"
      >
        ON
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        QC
      </ins>
      

      <del
        class="bg-red-100 text-red-500"
      >
        K1A 0
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
        H2
      </ins>
      B
      <del
        class="bg-red-100 text-red-500"
      >
        1
      </del>
      <ins
        class="bg-green-100 text-green-500"
      >
         2C3
      </ins>
      
Canada
    </div>
  </address>
</div>
`;
